# python-network-traffic-anomaly-detector

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_traffic.csv
src/anomaly_detector/: __init__.py  analyzer.py  cli.py  loader.py  models.py  rules.py
tests/: test_analyzer.py  test_cli.py  test_loader.py  test_models.py  test_rules.py
